@@ -55,6 +55,7 @@ Version 1.8.1
        disabled when filter is cleared. (Stefan)
 - BUG: Issue #520: TortoiseMerge fails to detect
        utf-16 without BOM. (Stefan)
+- NEW: Issue #521: Show inherited properties. (Stefan)
 
 Version 1.8.0
 See the release notes here:
